# short_link

./: .dockerignore  .env  .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  application.yaml  start.sh
.github/workflows/: docker-publish.yml
migrations/2023-07-06-143408_link_history/: down.sql  up.sql
scripts/: postgres-init.sh  postgres-start.sh  postgres-stop.sh
sql/: ddl.sql
src/: config.rs  demo.rs  main.rs  prepare.rs  schema.rs
src/handle/: admin.rs  api.rs  error_handler.rs
src/idgen/: default_id_generator.rs  i_snow_worker.rs  id_generator_options.rs  mod.rs  snow_worker_m1.rs  snow_worker_m2.rs  yit_id_helper.rs
src/pojo/: link_history.rs  mod.rs
src/service/: cleanup_service.rs  link_base_service.rs  link_service.rs  mod.rs
src/types/: enums.rs  mod.rs
src/utils/: helper.rs
