[package]
name = "short_link"
version = "0.1.0"
edition = "2021"
authors = ["Kurisu <lucifer994@@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kurisu994/short_link"
homepage = "https://github.com/kurisu994/short_link"
description = "使用AXUM构建的短链接服务"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.71"
axum = { version = "0.6", features = ["headers", "macros"] }
base64 = "0.21.2"
bb8 = "0.8.1"
bb8-redis = "0.13.1"
chrono = { version = "0.4.26", features = ["serde"] }
dotenv = "0.15.0"
log = "0.4.19"
redis = { version = "0.23.0", features = ["tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.22"
sha2 = "0.10.7"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "chrono", "mysql", "macros"] }
tokio = { version = "1.28.2", features = ["full"] }
tower = { version = "0.4.13", features = ["util", "filter"] }
tower-http = { version = "0.4", features = ["cors", "trace"] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
validator = { version = "0.16.1", features = ["derive"] }

[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = 'z' # Optimize for size
