[package]
name = "short_link"
version = "0.1.0"
edition = "2021"
authors = ["Kurisu <lucifer994@@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kurisu994/short_link"
homepage = "https://github.com/kurisu994/short_link"
description = "使用AXUM构建的短链接服务"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "^1.0"
axum = { version = "^0.7", features = ["macros"] }
base64 = "^0.22"
bb8 = "^0.8"
bb8-redis = "^0.15"
chrono = { version = "^0.4", features = ["serde"] }
http-body-util = "^0.1"
redis = { version = "^0.26", features = ["tokio"] }
serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "^0.9"
sha2 = "^0.10"
sqlx = { version = "^0.8", features = ["runtime-tokio-rustls", "chrono", "mysql", "macros"] }
tokio = { version = "^1.0", features = ["full"] }
tower-http = { version = "^0.6", features = ["cors", "trace"] }
tracing = "^0.1"
tracing-appender = "^0.2"
tracing-subscriber = { version = "^0.3", features = ["env-filter", "time"] }
uuid = { version = "^1.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
validator = { version = "^0.18", features = ["derive"] }

[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = 'z' # Optimize for size
